force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <pluralLabel>Bookings</pluralLabel>

    <nameField>
        <label>Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>BOOK-{0000}</displayFormat>
    </nameField>

    <sharingModel>ReadWrite</sharingModel>
</CustomObject>