force-app/main/default/objects/Booking__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>