force-app/main/default/objects/Booking__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>