force-app/main/default/objects/Booking__c/fields/Return_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_Location__c</fullName>
    <label>Return Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>