force-app/main/default/objects/Booking__c/recordTypes/Long_Term_Rental.recordType-meta.xml
<RecordType>
    <fullName>Long_Term_Rental</fullName>
    <active>true</active>
    <description>Record type for long term car rentals.</description>
    <label>Long Term Rental</label>


</RecordType>