force-app/main/default/objects/Booking__c/recordTypes/Short_Term_Rental.recordType-meta.xml
<RecordType>
    <fullName>Short_Term_Rental</fullName>
    <active>true</active>
    <description>Record type for short term car rentals.</description>
    <label>Short Term Rental</label>

</RecordType>