force-app/main/default/objects/Booking__c/validationRules/Start_Date_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Not_In_Past</fullName>
    <active>true</active>
    <description>Prevents creating bookings with a start date in the past.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be in the past.</errorMessage>
</ValidationRule>